--- a/style.css
+++ b/style.css
@@ -1,13 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
 body {
   margin: 0 auto;
   background-color: #221f1f;
-  color: white;
-  font-family: 'Montserrat', sans-serif;
 }
-
-/* HEADER */
 
 header {
   display: -webkit-box;
@@ -23,15 +17,15 @@ header {
   background-color: white;
 }
 
-.logo {
+header .logo {
   margin: 2vh 2vh 2vh 6vh;
 }
 
-.logo img {
+header .logo img {
   height: 4vh;
 }
 
-.links ul {
+header .links ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -39,95 +33,70 @@ header {
   list-style-type: none;
 }
 
-.links ul li {
+header .links ul li {
   margin: 2vh 3vh 2vh 2vh;
 }
 
-.links ul li img {
+header .links ul li img {
   height: 3vh;
 }
 
-/* MAIN */
-
 .containerBlock {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin: 14vh 4vw 5vh 4vw;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 14vh 5vw 5vh 1vw;
+  list-style-type: none;
 }
 
-.card {
-  width: 32%;
+.containerBlock .card {
+  width: 100%;
   padding: 6px;
-  -webkit-transition: -webkit-transform .2s;
-  transition: -webkit-transform .2s;
-  transition: transform .2s;
-  transition: transform .2s, -webkit-transform .2s;
 }
 
-.container-img {
+.containerBlock .card .container-img {
   position: relative;
 }
 
-.container-img .image {
-  width: 100%;
+.containerBlock .card .container-img .image {
+  width: 28vw;
 }
 
-.container-img:hover .image {
+.containerBlock .card .container-img .image:hover {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
   opacity: 0.4;
   z-index: 300;
 }
 
-.overlay {
-  width: 100%;
-  height: 100%;
+.containerBlock .card .overlay {
   position: absolute;
   display: none;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50% -50%);
-  transform: translate(-50% -50%);
-  -webkit-transition: 1s ease;
-  transition: 1s ease;
+          transform: translate(-50% -50%);
 }
 
-.container-img:hover .overlay {
-  display: block;
+.containerBlock .card .overlay .titleModal {
+  color: white;
 }
 
-.container-img .overlay h2 {
-  position: absolute;
-  font-size: 1rem;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.container-img .overlay h2::first-letter {
-  color: red;
-}
-
-.container-img .overlay h4 {
-  position: absolute;
-  font-size: 0.8rem;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-/* MODAL */
-
-.textModal {
-  position: absolute;
+.containerBlock .card .overlay .textModal {
   color: white;
   text-transform: lowercase;
 }
 
-.modal {
+.containerBlock .card .overlay :hover {
+  display: block;
+}
+
+.containerModal .modal {
   display: none;
   position: fixed;
   z-index: 1;
@@ -139,22 +108,33 @@ header {
   margin: -6vh;
 }
 
-.close {
+.containerModal .modal .close {
   color: #aaaaaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
 }
 
-.close:focus {
+.containerModal .modal .close :hover, .containerModal .modal .close :focus {
   color: red;
   text-decoration: none;
   cursor: pointer;
 }
 
-.modal::first-letter {
+.containerModal .modal #titleModal {
+  position: absolute;
+}
+
+.containerModal .modal ::first-letter {
   color: #cc1010;
   font-size: 130%;
 }
 
-/* FOOTER */
+.containerModal .modal #textModal {
+  position: absolute;
+}
+
+.containerModal .modal .control {
+  display: none;
+}
+/*# sourceMappingURL=style.css.map */
