--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,7 @@ nav {
 .container {
   width: 98vw;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   justify-content: center;
   margin-top: 8vh;
   margin-left: 1vw;
