--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
+  padding: 0 auto;
   background-color: #f7f7f7;
 }
 
@@ -45,6 +45,7 @@ nav .links ul li img {
 
 .container {
   width: 98vw;
+  height: 96vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -55,8 +56,7 @@ nav .links ul li img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 8vh;
-  margin-left: 1vw;
+  margin-top: 4vh;
 }
 
 .container .container-card {
