--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 body  {
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
+  padding: 0 auto;
   background-color: #f7f7f7;
 }
 
@@ -36,11 +36,11 @@ nav {
 
 .container {
   width: 98vw;
+  height: 96vh;
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
-  margin-top: 8vh;
-  margin-left: 1vw;
+  margin-top: 4vh;
   .container-card  {
     padding: 2px;
     width: 33%;
